styles/mainpage.css
/* * {
    border: 2px red solid;
} */

@font-face {
    font-family: 'Inter';
    src: url('../fonts/inter.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}


body {
    background-color: #e0dfdf;
}

img {
    height: 100%;
    width: auto;
}

h1 {
    font-size: 100px;
    text-align: center;
    margin-top: 10px;
    margin-bottom: 0px;
    box-sizing: border-box;
    height: 102px;
    font-family: 'Inter', 'New Times Roman';
    font-size: 105px;
}

/* 
Recipe card styling
*/

.recipeCardContainer {
    display: flex;
    justify-content: space-evenly;

}

.recipeImage {
    width: 205px;
    height: 245px;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 8px;
}

.recipeCard {
    background: white;
    padding: 20px;
    border-radius: 8px;
}

